--- a/package.json
+++ b/package.json
@@ -6,9 +6,16 @@
     "dev": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "format": "prettier ./src/ --write"
   },
   "dependencies": {
-    "astro": "^5.13.5"
+    "@astrojs/vue": "^5.1.0",
+    "astro": "^5.13.5",
+    "vue": "^3.5.21"
+  },
+  "devDependencies": {
+    "prettier": "^3.6.2",
+    "prettier-plugin-astro": "^0.14.1"
   }
 }
