--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "format": "prettier ./src/ --write"
   },
   "dependencies": {
+    "@astrojs/mdx": "^4.3.4",
     "@astrojs/vue": "^5.1.0",
     "astro": "^5.13.5",
     "vue": "^3.5.21"
