--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@astrojs/mdx": "^4.3.4",
     "@astrojs/vue": "^5.1.0",
+    "@lucide/astro": "^0.542.0",
     "astro": "^5.13.5",
     "vue": "^3.5.21"
   },
