--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "prettier": "^3.6.2",
     "prettier-plugin-astro": "^0.14.1",
     "prettier-plugin-css-order": "^2.1.2",
-    "prettier-plugin-organize-imports": "^4.2.0"
+    "prettier-plugin-organize-imports": "^4.2.0",
+    "vue-tsc": "^3.0.6"
   }
 }
